apps/base/infra-kubernetes-metrics-server/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-kubernetes-metrics-server
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
