apps/base/infra-kubernetes-metrics-server/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-metrics-server
  namespace: infra-kubernetes-metrics-server
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
      app.kubernetes.io/component: metrics-server

  ingress:
    # Allow from everywhere
    # (needed for `kubectl top`)
    - ports:
        - port: https
